Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -1,2 +1,13 @@
 <!-- Write your HTML in this file -->
-<DOCTAG html>
+<!DOCTAG html>
+<html>
+  <head>
+    <title>
+      Tittttttles
+    </title>
+  </head>
+  <h1>Moonuniut</h1>
+  <body>
+    I am the model of a modern major walrus
+  </body>
+</html>
