Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
       Tittttttles
     </title>
   </head>
-  <h1>Moonuniut</h1>
-  <body>
+  
+  <body><h1>Moonuniut</h1>
     I am the model of a modern major walrus
   </body>
 </html>
